# notepad-plus-plus-linux

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORTED_SYSTEM.md  TODO.md
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: 2-feature-request.yml  3-linux-migration-task.yml  4-linux-regression.yml  bug_report.yml  config.yml
.github/workflows/: label-sync.yml  linux-cmake.yml  linux-desktop-integration.yml  linux-release.yml  linux-wayland-qa.yml  win32-boundary.yml
docs/: api-map-win32.md  architecture.md  audit-win32.md  coding-rules.md  compatibility-target.md  crash-recovery-journal.md  decisions.md  dev-setup-manjaro.md  distro-validation-evidence-format.md  distro-validation-plan.md  distro-validation-report-rc1-2026-02-13.md  distro-validation-report-rc2-2026-02-14.md  distro-validation-report-rc3-2026-02-14.md  extension-api-v1.md  extension-authoring-guide.md  extension-performance-guardrails.md  feature-freeze-rc3.md  ga-blockers.md  ga-ci-continuity-log-2026-02.md  ga-gate-exception-2026-02-14.md  ga-triage-playbook.md  help-and-support.md  incubator-promotion-validation-2026-02-13.md  incubator-promotion-validation-2026-02-14.md  install-consumer-linux.md  install-linux.md  language-detection-metrics.md  manjaro-build-status.md  package-split-strategy.md  performance-baseline.md  phase11-implementation.md  phase12-implementation.md  phase9-scope.md  plugin-strategy.md  portable-modules.md  rc1-blockers.md  rc1-crash-correctness-burndown-2026-02-13.md  rc2-blockers.md  rc3-blockers.md  rc3-regression-report-2026-02-14.md  (+14 more)
docs/adr/: 0000-adr-template.md  0001-linux-native-target-and-compatibility-model.md  0002-qt6-as-initial-linux-ui-backend.md  0003-platform-boundary-and-win32-containment.md  0004-cmake-linux-build-path-with-windows-coexistence.md  0005-linux-native-plugin-api-no-windows-abi-shim-for-mvp.md  0006-manjaro-first-packaging-and-release-practices.md  0007-vscode-compatibility-targeted-language-assets-over-full-api-parity.md  README.md  adr-conformance-check-2026-02-13.md  rossengineering-alignment-2026-02-13.md
docs/adr/rossengineering-bafc82c7/: ADR-003 — Security Posture & Disclosure Policy.md  ADR-004 — Versioning & Backward Compatibility Strategy.md  ADR-005 — Repository Admission & Lifecycle Policy.md  ADR-006 — Incubator Policy & Promotion Criteria.md  ADR-006a Repository Promotion Checklist.md  ADR-008 — Testing & Quality Assurance Expectations.md  README.md
docs/releases/: v0.10.0-beta.1-checklist.md  v0.10.0-beta.1.md  v0.10.0-beta.2-checklist.md  v0.10.0-beta.2.md  v0.10.0-beta.3-checklist.md  v0.10.0-beta.3.md  v0.10.0-beta.4-checklist.md  v0.10.0-beta.4.md  v0.10.0-beta.5-checklist.md  v0.10.0-beta.5.md  v0.10.0-beta.6-checklist.md  v0.10.0-beta.6.md  v0.10.0-beta.7-checklist.md  v0.10.0-beta.7.md  v0.10.0-rc.4-checklist.md  v0.10.0-rc.4.md  v0.6.0-alpha.1.md  v0.7.0-alpha.1.md  v0.8.0-beta.1-checklist.md  v0.8.0-beta.1.md  v0.9.0-beta.2-checklist.md  v0.9.0-beta.2.md  v0.9.3-rc.1-checklist.md  v0.9.3-rc.1.md  v0.9.6-rc.2-checklist.md  v0.9.6-rc.2.md  v0.9.9-rc.3-checklist.md  v0.9.9-rc.3.md  v0.9.9-rc.3a-checklist.md  v0.9.9-rc.3a.md  v0.9.9-rc.3b-checklist.md  v0.9.9-rc.3b.md  v1.0.0-checklist.md  v1.0.0.md
docs/schemas/: extension-manifest-v1.schema.json  skin-v1.schema.json
lexilla/lexers/: LexUser.cxx
packaging/arch/: PKGBUILD  notepad-plus-plus-linux.install
packaging/linux/: notepad-plus-plus-linux.desktop
packaging/linux/mime/: notepad-plus-plus-linux.xml
packaging/linux/skins/: dark.json  dusk.json  high-contrast.json  light.json  solarized-light.json
platform/include/: IClipboardService.h  IDiagnosticsService.h  IFileSystemService.h  ILspClientService.h  IPathService.h  IProcessService.h  IScalingService.h  IThemeService.h  Types.h
platform/linux/: LinuxClipboardService.cpp  LinuxClipboardService.h  LinuxDiagnosticsService.cpp  LinuxDiagnosticsService.h  LinuxExtensionService.cpp  LinuxExtensionService.h  LinuxFileSystemService.cpp  LinuxFileSystemService.h  LinuxLspClientService.cpp  LinuxLspClientService.h  LinuxPathService.cpp  LinuxPathService.h  LinuxProcessService.cpp  LinuxProcessService.h  VscodeLanguageCompatibility.cpp  VscodeLanguageCompatibility.h
scripts/: check_linux_source_win32_clean.sh  check_startup_typing_budget.sh  check_win32_boundaries.sh  dev-setup-manjaro.sh
scripts/ga/: update_ci_continuity_log.sh
scripts/linux/: install-local.sh  run-desktop-integration-matrix.sh  run-wayland-qa.sh  run_rc3_regression_matrix.sh  uninstall-local.sh  validate-desktop-integration.sh  validate-file-handler-defaults.sh
scripts/release/: create_linux_release_artifacts.sh  run_release_dry_run.sh
tests/fixtures/config-migration/: README.md  v0.10.0-beta.2.json  v0.9.9-rc3.json
tests/fixtures/encoding-large-file/: README.md  mixed-encoding-cases.json  very-large-file-pattern.txt
tests/fixtures/language-detection/: README.md  sample_html.html  sample_html_no_ext.txt  sample_json_no_ext.txt  (+4 more)
tests/perf/: startup_typing_benchmark.cpp
tests/platform/: extension_lifecycle_smoke_test.cpp  linux_services_smoke.cpp  lsp_client_foundation_smoke_test.cpp
tests/regression/: config_migration_regression_test.cpp  crash_recovery_persistence_regression_test.cpp  encoding_large_file_regression_test.cpp  language_aware_formatting_regression_test.cpp  language_detection_regression_test.cpp  lexer_style_config_regression_test.cpp  lsp_baseline_ux_regression_test.cpp  skin_accessibility_regression_test.cpp  vscode_language_asset_compatibility_test.cpp
tests/smoke/: lexilla_smoke.cpp  scintilla_document_smoke.cpp  syntax_highlighting_smoke_test.cpp
tests/support/: scintilla_debug_stubs.cpp
tests/unit/: core_text_undo_redo_test.cpp
ui/qt/: EditorSettingsMigration.cpp  EditorSettingsMigration.h  LanguageAwareFormatter.cpp  LanguageAwareFormatter.h  LanguageDetection.cpp  LanguageDetection.h  LexerStyleConfig.h  LspBaselineFeatures.cpp  LspBaselineFeatures.h  MainWindow.cpp  MainWindow.h  main.cpp
(+15 files in other folders)
